app/assets/stylesheets/assets-store/sections/_color_scheme.css.scss
#color-scheme {
  background: $gray-light;
  color: $gray-dark;

  h1 {
    font-size: 40px;
    font-weight: 500;
  }
}

.color-section {
  @include make-sm-column(10);
  @include make-sm-column-offset(1);
  @include make-xs-column(12);

  h2 {
    font-size: 16px;
    font-weight: 400;
  }
}

.color-list {
  li {
    display: inline-flex;
    margin: 0 10px;
    text-align: center;
  }
}

.color {
  @include border-radius(100%);

  display: block;
  margin: 25px;
  padding: 25px;
  position: relative;

  span {
    color: $white;
    display: none;
    font-weight: 200;
    font-size: 16px;
    left: 20%;
    line-height: 0;
    position: absolute;
  }

  &:hover, &.zeroclipboard-is-hover {
    margin: 0px;
    padding: 50px;

    span {
      display: block;
    }
  }
}

